version/0.27/_sources/api/solver/_autosummary/settings/premix_critical_strain.rst.txt
:orphan:

.. _premix_critical_strain:

premix_critical_strain
======================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.premix_critical_strain
    :show-inheritance:

.. rubric:: Attributes

====================================================   ===========================================

Attribute                                                                                  Summary

====================================================   ===========================================
:ref:`option <option_26>`                                         Select material property method.

:ref:`value <value_15>`                                           Specify constant property value.

:ref:`user_defined_function <user_defined_function>`       Specify user-defined property function.

====================================================   ===========================================

.. rubric:: Included in:

==========================================================   ==============================================

Parent                                                                                              Summary

==========================================================   ==============================================
:ref:`fluid_child <fluid_child>`                                              'child_object_type' of fluid.

:ref:`mixture_child <mixture_child>`                                        'child_object_type' of mixture.

:ref:`volumetric_species_child <volumetric_species_child>`       'child_object_type' of volumetric_species.

:ref:`material_3_child <material_3_child>`                                 'child_object_type' of material.

==========================================================   ==============================================

